More refactoring; last commit was splitting on every line, not semicolon